make-a-wish-salesforce/src/objects/Wish_Signature_Forms__c.object
<CustomObject>
    <description>Contains the master data set of Wish Required Form records which are utilized selectively by affiliated chapters via the Junction object &apos;Wish Signature Chapter Forms&apos; Object records.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, this form is being used by MAWA. When unchecked, this form is no longer being used. There is no automation that invalidates forms where the form is inactive but the wish is still actively progressing.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_add_for_Participant_Guardian__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, this form is generated for each approved minor participant so that every wish produces one of these forms for a guardian of the minor participant. (Relationship to Contact with Wish Affiliation &quot;Approved Participant&quot; has &quot;Parent Legal Guardian&quot; checked.)</description>
        <inlineHelpText>When checked, this form is auto-generated for the guardian of every approved minor participant.</inlineHelpText>
        <label>Auto-add for Participant Guardian</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_add_for_Participant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, this form will be auto-generated for every approved participant OVER 18 that is added to the wish who is not a guardian of another participant.</description>
        <inlineHelpText>When checked, this form will be auto-generated for every approved participant OVER 18 that is added to the wish who is not a guardian of another participant.</inlineHelpText>
        <label>Auto-add for Participant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_add_for_Wish_Child_Guardian__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, automation generates this form upon lead convert so that every wish produces one of these forms for a guardian of the wish child to sign. (Relationship to Wish Child Contact has &quot;Parent Legal Guardian&quot; checked.)</description>
        <inlineHelpText>When checked, this form is auto-generated for the guardian of the wish child.</inlineHelpText>
        <label>Auto-add for Wish Child Guardian</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_add_for_Wish_Child__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, this form will be auto-generated for the Wish Child if they are OVER 18.</description>
        <inlineHelpText>When checked, this form will be auto-generated for the Wish Child if they are OVER 18.</inlineHelpText>
        <label>Auto-add for Wish Child</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_From_Signature_to_Expiry__c</fullName>
        <description>The number of days for which this signature may be valid before needing to be re-signed. Gets propagated to the corresponding field on the Wish Required Signature. Typically used for medical forms (but not for family forms).</description>
        <inlineHelpText>The number of days for which this signature is valid before needing to be re-signed.</inlineHelpText>
        <label>Days From Signature to Expiry</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delivery_Option_ID_Print__c</fullName>
        <description>The record ID of the delivery option (e.g. email, download) that Drawloop/DocGen uses to determine how to deliver the finished document when the option to print for offline is selected.</description>
        <inlineHelpText>Use the 18-digit ID of the Drawloop delivery option for downloading to print for offline signature.</inlineHelpText>
        <label>Delivery Option ID Print</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Option_ID_eSign__c</fullName>
        <description>The record ID of the delivery option (e.g. email, download) that Drawloop/DocGen uses to determine how to deliver the finished document when the option to send for e-signature is selected.</description>
        <inlineHelpText>Use the 18-digit ID of the Drawloop delivery option for eSignature.</inlineHelpText>
        <label>Delivery Option ID eSign</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diagnosis_Verification_for_Lead_Convert__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, will be used as the form for the Diagnosis Verification wish required signature on Lead Convert.  Note: if more than 1 record is set with this value as true, the system will use the newest record.</description>
        <inlineHelpText>If selected, will be used as the form for the Diagnosis Verification wish required signature on Lead Convert.  Note: if more than 1 record is set with this value as true, the system will use the newest record.</inlineHelpText>
        <label>Diagnosis Verification for Lead Convert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DocGen_Package_ID__c</fullName>
        <description>The record ID of the DocGen Package (Drawloop template) that this form references as a template for content.</description>
        <inlineHelpText>Use the 18-digit ID of the Drawloop DocGen Package for this form.</inlineHelpText>
        <label>DocGen Package ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Type__c</fullName>
        <description>The type of signature required: medical or family (i.e. from a participant, family member or household member of the Wish Child). This value gets written to the Type field of the Wish Required SIgnature.</description>
        <inlineHelpText>Family forms are signed by a family member of the Wish Child or participant. Medical forms are signed by a designated medical professional.</inlineHelpText>
        <label>Form Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Clearance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this form is (or includes) the Wish Clearance. In part, this is to distinguish forms that may have multiple components (e.g. the combo form) where at least one section of the form is wish clearance.</description>
        <inlineHelpText>If checked, this form is (or includes) the Wish Clearance.</inlineHelpText>
        <label>Is Clearance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Medical_Summary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this form is (or includes) the child&apos;s Medical Summary In part, this is to distinguish forms that may have multiple components (e.g. the combo form) where at least one section of the form is a medical summary.</description>
        <label>Is Medical Summary</label>
        <type>Checkbox</type>
    </fields>
    <label>Wish Signature Form</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Form_Type__c</columns>
        <columns>DocGen_Package_ID__c</columns>
        <columns>Delivery_Option_ID_eSign__c</columns>
        <columns>Delivery_Option_ID_Print__c</columns>
        <columns>Days_From_Signature_to_Expiry__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Auto_add_for_Participant__c</columns>
        <columns>Auto_add_for_Participant_Guardian__c</columns>
        <columns>Auto_add_for_Wish_Child__c</columns>
        <columns>Auto_add_for_Wish_Child_Guardian__c</columns>
        <columns>Diagnosis_Verification_for_Lead_Convert__c</columns>
        <columns>Is_Clearance__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Forms with Auto-Add fields</label>
    </listViews>
    <nameField>
        <label>Wish Signature Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wish Signature Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>